# dunst

./: .clang-format  .clang_complete  .editorconfig  .editorconfig-checker.json  .gitignore  .travis.yml  .valgrind.suppressions  AUTHORS  CHANGELOG  CHANGELOG.md  CONTRIBUTING.md  HACKING.md  INSTALL  LICENSE  LICENSE.dmenu  Makefile  README  README.1  README.md  README.pod  RELEASE_NOTES  RELEASE_NOTES.0.4.0  RELEASE_NOTES.1.0.0  RELEASE_NOTES.next  TODO  config.def.h  config.h  config.mk  container.c  container.h  dbus.c  dbus.h  draw.c  draw.h  dunst.1  dunst.c  dunst.h  dunst.service.in  dunst.systemd.service.in  dunst_dbus.c  (+29 more)
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md  pull_request_template.md
.github/workflows/: extra.yml  main.yml
AppImage/: make-appimage.sh
completions/: _dunstctl.zshcomp  _dunstify.zshcomp  dunst.bashcomp  dunst.fishcomp  dunstctl.bashcomp  dunstctl.fishcomp  dunstify.bashcomp  dunstify.fishcomp  meson.build
contrib/: _dunst  _dunst.zshcomp  _dunstctl  _dunstctl.zshcomp  dunst.bashcomp  dunst.service  dunst.systemd.service.in  dunst_espeak.sh  dunst_xr_theme_changer.sh  dunstctl.bashcomp  dunstctl.fishcomp  notification-history.sh  progress-notify.sh
docs/: compiling.rst  configuration.rst  dunst.1.pod  dunst.1.pod.in  dunst.5.pod  dunst.pod  dunstctl.pod  dunstify.pod  faq.rst  getting_started.rst  index.rst  license.rst  meson.build  packages.rst  rules.rst  troubleshooting.rst
docs/internal/: Doxyfile  doxygen-awesome.css  dunst_layout.xcf  release-checklist.md
src/: clipboard.c  clipboard.h  dbus.c  dbus.h  draw.c  draw.h  dunst.c  dunst.h  icon-lookup.c  icon-lookup.h  icon.c  icon.h  ini.c  ini.h  input.c  input.h  log.c  log.h  main.c  markup.c  markup.h  menu.c  menu.h  meson.build  notification.c  notification.h  option_parser.c  option_parser.h  output.c  output.h  queues.c  queues.h  rules.c  rules.h  settings.c  settings.cocci  settings.h  settings.sed.sh  settings_data.h  test  (+4 more)
src/wayland/: foreign_toplevel.c  foreign_toplevel.h  libgwater-wayland.c  libgwater-wayland.h  pool-buffer.c  pool-buffer.h  wl.c  wl.h  wl_ctx.h  wl_output.c  wl_output.h  wl_seat.c  wl_seat.h
src/wayland/protocols/: cursor-shape-v1-client-header.h  cursor-shape-v1.h  ext-idle-notify-v1-client-header.h  ext-idle-notify-v1.h  idle-client-header.h  idle.h  meson.build  tablet-unstable-v2-client-header.h  tablet-unstable-v2.h  wlr-foreign-toplevel-management-unstable-v1-client-header.h  wlr-foreign-toplevel-management-unstable-v1.h  wlr-layer-shell-unstable-v1-client-header.h  wlr-layer-shell-unstable-v1.h  xdg-output-unstable-v1-client-header.h  xdg-output-unstable-v1.h  xdg-shell-client-header.h  xdg-shell.h
src/x11/: screen.c  screen.h  x.c  x.h
test/: dbus.c  draw.c  dummy_output.c  dummy_output.h  dunst.c  dunstrc.ignore_newline_no_wrap  dunstrc.markup  dunstrc.nomarkup  dunstrc.nowrap  dunstrc.show_age  greatest.h  greenest.awk  helpers.c  helpers.h  icon-lookup.c  icon.c  ini.c  input.c  log.c  markup.c  menu.c  meson.build  misc.c  notification.c  notify.py  option_parser.c  queues.c  queues.h  rules.c  setting.c  settings_data.c  test-install.sh  test.c  test.sh  utils.c
test/data/: dunstrc.default  dunstrc.markup  dunstrc.nomarkup  dunstrc.show_age  test-ini
test/data/fonts/: DejaVuSansMono.license  fonts.conf
test/data/icons/theme/: index.theme
test/functional-tests/: dunstrc.default  dunstrc.gaps  dunstrc.hide_text  dunstrc.hot_reload  dunstrc.icon_position  dunstrc.ignore_newline  dunstrc.ignore_newline_no_wrap  dunstrc.markup  dunstrc.nomarkup  dunstrc.nowrap  dunstrc.progress_bar  dunstrc.run_script  dunstrc.separator_click  dunstrc.show_age  dunstrc.vertical_align  script_test.sh  test.sh
