option('docs', type: 'feature', value: 'enabled', description: 'Generate and install man pages')
option('test', type: 'boolean', value: false, description: 'Build test program')
option('wayland', type: 'feature', value: 'auto', description: 'Enable wayland support')
option('dunstify', type: 'feature', value: 'auto', description: 'Install libnotify dunstify utility')
option('systemd', type: 'feature', value: 'auto', description: 'Install systemd user service unit')
