option('docs', type: 'feature', value: 'auto', description: 'Generate and install man pages')
option('wayland', type: 'feature', value: 'auto', description: 'Enable wayland support')
option('x11', type: 'feature', value: 'auto', description: 'Enable X11 support')
option('dunstify', type: 'feature', value: 'auto', description: 'Install libnotify dunstify utility')
option('systemd', type: 'feature', value: 'auto', description: 'Install systemd user service unit')
